kubernetes/taiga-async-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: taiga-async
  name: taiga-async
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-async
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: taiga-async
    spec:
      containers:
      - command:
        - /taiga-back/docker/async_entrypoint.sh
        image: taigaio/taiga-back:latest
        imagePullPolicy: ""
        name: taiga-async
        resources: {}
        volumeMounts:
        - mountPath: /taiga-back/static
          name: taiga-static-data
        - mountPath: /taiga-back/media
          name: taiga-media-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: taiga-static-data
        persistentVolumeClaim:
          claimName: taiga-static-data
      - name: taiga-media-data
        persistentVolumeClaim:
          claimName: taiga-media-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: taiga-async
  name: taiga-async
spec:
  ports:
  - name: "5672"
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app: taiga-async
