kubernetes/taiga-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: taiga-db  
  name: taiga-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: taiga-db  
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_DB
              name: variables-env  
        - name: POSTGRES_HOST
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_HOST
              name: variables-env
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PASSWORD
              name: variables-env
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_USER
              name: variables-env
        image: postgres:12.3
        imagePullPolicy: ""
        name: taiga-db
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: taiga-db-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: taiga-db-data
        persistentVolumeClaim:
          claimName: taiga-db-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: taiga-db
  name: taiga-db
spec:
  ports:
  - name: "5432"
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: taiga-db
