kubernetes/taiga-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: taiga-ingress
  namespace: taiga
spec:
  virtualhost:
    # Replace by your own domain
    fqdn: taiga6-dev.domain.local
  # Optional   
    tls:
      secretName: certificate-secret
  routes:
    - conditions:
      - prefix: /
      services:
        - name: taiga-gateway
          port: 80
